--- a/package.json
+++ b/package.json
@@ -7,17 +7,35 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@anuradev/capacitor-background-mode": "^2.0.8",
+    "@capacitor-community/keep-awake": "^5.0.0",
+    "@capacitor/android": "^6.1.0",
+    "@capacitor/clipboard": "^6.0.0",
+    "@capacitor/core": "^6.1.0",
+    "@capacitor/device": "^6.0.0",
+    "@capacitor/ios": "^6.1.0",
+    "@capacitor/network": "^6.0.1",
+    "@capacitor/screen-orientation": "^6.0.1",
+    "@capacitor/share": "^6.0.1",
+    "@capacitor/status-bar": "^6.0.0",
+    "@hugotomazi/capacitor-navigation-bar": "^4.0.1",
+    "cordova-plugin-headsetdetection": "^3.0.0",
+    "onesignal-cordova-plugin": "^5.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "browserslist": [
     "> 1%",
