--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,7 +14,7 @@ workflows:
           npm install -g @ionic/cli
       - name: Install Dependencies
         script: |
-          npm install
+          npm install --legacy-peer-deps
           npx cap sync ios
       - name: Build iOS App
         script: |
@@ -44,7 +44,7 @@ workflows:
           npm install -g @ionic/cli
       - name: Install Dependencies
         script: |
-          npm install
+          npm install --legacy-peer-deps
           npx cap sync ios
       - name: Run Tests
         script: |
